<resources>
    <string name="app_name">Fake pinterest</string>
    <string name="email_adr">Email address</string>
    <string name="policy1">By continuing, you agree to Pinterest\'s Terms of Service and acknowledge that you\'ve read our Privacy Policy.</string>
    <string name="policy2">Notice at collection.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Heading_search">Popular on Pinterest</string>
    <string name="test"> Testing layout</string>
    <string name="search">Search Pinterest</string>

    <string name="gardening">Gardening ideas</string>
    <string name="anime">Anime</string>
    <string name="fitness">Fitness</string>
    <string name="animals">Animals</string>
    <string name="beauty">Beauty</string>
    <string name="horror">Horror</string>
    <string name="travel">Travel</string>
    <string name="flower">Flower</string>
    <string name="clicked">The chosen one</string>

    <string name="creating">Start creating now</string>
</resources>